- Changing some info in package json.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tictactoe",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -44,5 +44,17 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.1.0.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/caballerof/TicTactoeAngular.git"
+  },
+  "author": "Reivaj Caballero",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/caballerof/TicTactoeAngular/issues"
+  },
+  "homepage": "https://github.com/caballerof/TicTactoeAngular#readme"
 }
